# truck-telemetry-pyspark

./: README.md  docker-compose.yaml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py  settings.py
apps/api/app/api/: __init__.py  clients.py  exceptions.py  schemas.py  truck.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  client.py  driver.py  telemetry.py  truck.py
apps/api/app/migrations/: env.py
apps/api/app/migrations/versions/: d717d94679a9_create_initial_tables.py
apps/api/app/services/: clients.py
apps/spark/: Dockerfile  pyproject.toml
