[project]
name = "truck-api"
version = "0.1.0"
description = "Truck telemetry API"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]